# sum-check-image

./: .gitmodules  Cargo.toml  sum-check.circom
circurits/: README.md  generate.sh  input.json  sum-check.circom
circurits/proofs/: pot12_0001.ptau  proof.json  sum-check.sym  sum-check_0000.zkey  sum-check_0001.zkey  verification_key.json  verifier.sol
circurits/proofs/sum-check_js/: sum-check.wasm
circurits/scripts/: compile.sh  compute-witness.sh  generate-proof.sh  generate-solidity.sh  powers-of-tau-ceremony.sh  verify-proof.sh
circurits/tmp/proofs/: pot12_0001.ptau  proof.json  public.json  sum-check.r1cs  sum-check_0000.zkey  sum-check_0001.zkey  verification_key.json  verifier.sol  witness.wtns
circurits/tmp/proofs/sum-check_cpp/: Makefile
clients/: index.js  package-lock.json  package.json
contracts/: .gitignore  foundry.toml  package-lock.json  package.json
contracts/script/: SumCheck.s.sol
contracts/src/: SumCheck.sol  sum-check.sol  sumcheckVerifier.sol
contracts/src/interface/: IVerifier.sol
contracts/test/: SumCheck.t.sol
frontend/: .env  .env.production  package.json  tailwind.config.js
frontend/public/: index.html  sum-check.wasm  sum-check_0001.zkey
frontend/src/: SumCheck.json
frontend/src/components/: ImageUpload.module.css  ImageUpload.tsx
frontend/src/types/: index.ts
infra/: cdk.context.json  deploy.sh  package-lock.json  package.json
infra/lib/: resize-stack.ts
server/: Cargo.toml
server/src/: main.rs
src/: main.rs
src/colors/: mod.rs  resize.rs  run.rs
