[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-multipart = "0.6.1"
actix-web = "4.4.0"
futures-util = "0.3.29"
image = "0.24.7"
serde = { version = "1.0.193", features = ["derive"] }
